--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,96 @@
-robotframework~=4.1.3
-rpa~=1.45.0
+appdirs==1.4.4
+attrs==21.4.0
+cached-property==1.5.2
+certifi==2021.10.8
+cffi==1.15.0
+chardet==3.0.4
+charset-normalizer==2.0.12
+click==7.1.2
+cryptography==3.4.8
+decorator==5.1.1
+defusedxml==0.7.1
+dnspython==2.2.0
+docutils==0.18.1
+et-xmlfile==1.1.0
+exchangelib==4.7.2
+fpdf2==2.5.0
+furl==2.1.3
+graphviz==0.13.2
+htmldocx==0.0.6
+idna==3.3
+importlib-resources==5.4.0
+isodate==0.6.1
+java-access-bridge-wrapper==0.9.4
+jsonpath-ng==1.5.3
+jsonschema==4.4.0
+lxml==4.8.0
+mss==6.1.0
+netsuitesdk==1.24.0
+notifiers==1.2.1
+ntlm-auth==1.5.0
+numpy==1.22.2
+oauthlib==3.2.0
+openpyxl==3.0.9
+orderedmultidict==1.0.1
+pandas==1.4.1
+pdfminer.six==20201018
+Pillow==8.4.0
+platformdirs==2.5.1
+ply==3.11
+proxy-tools==0.1.0
+pycparser==2.21
+Pygments==2.11.2
+pynput-robocorp-fork==4.0.0
+PyPDF2==1.26.0
+pyperclip==1.8.2
+PyQt5==5.15.6
+PyQt5-Qt5==5.15.2
+PyQt5-sip==12.9.1
+PyQtWebEngine==5.15.5
+PyQtWebEngine-Qt5==5.15.2
+pyrsistent==0.18.1
+PySocks==1.7.1
+python-dateutil==2.8.2
+python-docx==0.8.11
+python-xlib==0.31
+pytz==2021.3
+pywebview==3.6.1
+PyYAML==5.4.1
+requests==2.27.1
+requests-file==1.5.1
+requests-ntlm==1.1.0
+requests-oauthlib==1.3.1
+requests-toolbelt==0.9.1
+rfc3987==1.3.8
+robocorp-dialog==0.4.1
+robotframework==4.1.3
+robotframework-pythonlibcore==3.0.0
+robotframework-requests==0.9.2
+robotframework-rpa==0.1.0
+robotframework-seleniumlibrary==5.1.3
+robotframework-seleniumtestability==1.1.0
+rpa==1.45.0
+rpa-framework==0.0.0.0.1
+rpaframework==12.8.2
+rpaframework-core==6.6.2
+rpaframework-dialogs==0.4.2
+rpaframework-pdf==1.30.4
+selenium==3.141.0
+simple-salesforce==1.11.5
+six==1.16.0
+sortedcontainers==2.4.0
+soupsieve==2.3.1
+tagui==1.45.0
+tenacity==8.0.1
+tqdm==4.62.3
+tweepy==3.10.0
+tzdata==2021.5
+tzlocal==2.1
+urllib3==1.26.8
+webdrivermanager==0.10.0
+wrapt==1.13.3
+xlrd==2.0.1
+xlutils==2.0.0
+xlwt==1.3.0
+zeep==4.1.0
+zipp==3.7.0
